# ai-mail-butler

./: .dockerignore  .env.example  .gitignore  About.md  About.zh-TW.md  Cargo.toml  DOCKER_AWS_GUIDE.md  DOCKER_AWS_GUIDE.zh-TW.md  Dockerfile  PRE_COMMIT_REPORT.md  README.md  README.zh-TW.md  TODO.md  TODO.zh-TW.md  build.rs  build_all.sh  docker-compose.yml  requirements.md  test_samotop.rs  test_smtp_local.py
.agents/workflows/: pre-commit.md  requirements-review.md
.cargo/: config.toml
.github/prompts/: pre-commit.prompt.md  requirements-review.prompt.md
.github/workflows/: docker-publish.yml
browser-extension/: README.md  README.zh-TW.md  background.js  content-script.js  manifest.json  package-lock.json  package.json  sidepanel.css  sidepanel.html  sidepanel.js  webllm-entry.js
browser-extension/scripts/: package-extension.mjs
docs/: CLOUDFLARE-CACHE-PURGE.md  CLOUDFLARE-CACHE-PURGE.zh-TW.md  GITHUB-ACTIONS-STAGING-DEPLOY.md  GITHUB-ACTIONS-STAGING-DEPLOY.zh-TW.md  GMAIL-FILTER-FORWARDING.md  GMAIL-FILTER-FORWARDING.zh-TW.md  GMAIL-INTEGRATION-STRATEGY.md  GMAIL-INTEGRATION-STRATEGY.zh-TW.md  GMAIL-SMTP-SETUP.md  GOOGLE-WORKSPACE-FORWARDING-POLICY.md  GOOGLE-WORKSPACE-FORWARDING-POLICY.zh-TW.md  HOW-IT-WORKS.md  HOW-IT-WORKS.zh-TW.md  M365_OAUTH_SETUP.md  M365_OAUTH_SETUP.zh-TW.md  NERDCTL_COMPOSE_GUIDE.md  NERDCTL_COMPOSE_GUIDE.zh-TW.md  RBAC.md  RBAC.zh-TW.md  READONLY-OVERLAY-MODE.md  READONLY-OVERLAY-MODE.zh-TW.md  REGULATORY_GAP_PLAN.md  REGULATORY_GAP_PLAN.zh-TW.md  SMTP-SETUP.md  SSHFS-CLI-REMOTE-DEBUG.md  SSHFS-CLI-REMOTE-DEBUG.zh-TW.md  UNIT_TEST_COVERAGE_PLAN.md  UNIT_TEST_COVERAGE_PLAN.zh-TW.md  WEBLLM-GMAIL-BROWSER-EXTENSION-FEASIBILITY.md  WEBLLM-GMAIL-BROWSER-EXTENSION-FEASIBILITY.zh-TW.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: About.tsx  App.css  App.tsx  AuthContext.tsx  Chat.tsx  i18n.ts  index.css  main.tsx
frontend/src/pages/: AnalyticsPage.tsx  DashboardPage.tsx  (+7 more)
src/: config.rs  main.rs
src/ai/: mod.rs
src/db/: mod.rs
src/mail/: mod.rs
src/models/: mod.rs
src/services/: mod.rs
src/web/: mod.rs
