[package]
name = "ai-mail-butler"
version = "0.1.0"
edition = "2021"
description = "A self-hosted email processing assistant platform"
authors = ["Yihua <yihua@yihua.app>"]
license = "Unlicense OR CC0-1.0" # Based on the user's license preference

[dependencies]
tokio = { version = "1.37", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "chrono", "uuid"] }
reqwest = { version = "0.12", features = ["json"] }
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }
samotop = "0.12"
mailparse = "0.14"
dotenvy = "0.15"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
